--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "webpack-plugin": "^1.0.5",
+    "workbox-cacheable-response": "^7.0.0",
     "workbox-core": "^7.0.0",
+    "workbox-expiration": "^7.0.0",
     "workbox-precaching": "^7.0.0",
+    "workbox-routing": "^7.0.0",
+    "workbox-strategies": "^7.0.0",
     "workbox-window": "^7.0.0"
   },
   "scripts": {
